--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
 		<!-- maven-compiler-plugin -->
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<maven.compiler.source>1.7</maven.compiler.source>
+		
+		<sonar.jacoco.excludes>*</sonar.jacoco.excludes>
+		<sonar.jacoco.includes>kz/*</sonar.jacoco.includes>
 	</properties>
 
 
@@ -121,6 +124,21 @@
 			<scope>test</scope>
 			<type>pom</type>
 		</dependency>
+		<!-- 
+		 -->
+		<dependency>
+			<groupId>org.jboss.arquillian.extension</groupId>
+			<artifactId>arquillian-jacoco</artifactId>
+			<version>1.0.0.Alpha5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>org.jacoco.core</artifactId>
+			<version>0.6.3.201306030806</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -140,6 +158,13 @@
 				<groupId>org.jboss.as.plugins</groupId>
 				<artifactId>jboss-as-maven-plugin</artifactId>
 				<version>${version.jboss.maven.plugin}</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${version.surefire.plugin}</version>
+				<configuration>
+					<argLine>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=8000</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -182,7 +207,6 @@
 				<plugins>
 					<plugin>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${version.surefire.plugin}</version>
 						<configuration>
 							<skip>true</skip>
 						</configuration>
