--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,6 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		
-		<sonar.jacoco.excludes>*</sonar.jacoco.excludes>
-		<sonar.jacoco.includes>kz/*</sonar.jacoco.includes>
 	</properties>
 
 
@@ -124,12 +122,11 @@
 			<scope>test</scope>
 			<type>pom</type>
 		</dependency>
-		<!-- 
-		 -->
+
 		<dependency>
 			<groupId>org.jboss.arquillian.extension</groupId>
 			<artifactId>arquillian-jacoco</artifactId>
-			<version>1.0.0.Alpha5</version>
+			<version>1.0.0.Final-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -162,9 +159,6 @@
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${version.surefire.plugin}</version>
-				<configuration>
-					<argLine>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=8000</argLine>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -178,6 +172,16 @@
 			</releases>
 			<snapshots>
 				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>jboss-snapshots-repository</id>
+			<url>http://repository.jboss.org/nexus/content/repositories/snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
 			</snapshots>
 		</repository>
 	</repositories>
